<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_weight="5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingLeft="3dp"
                android:layout_marginTop="5dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src= "@drawable/camera"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="300dp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trolley"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/pic"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_list" />

                    <TextView
                        android:layout_width="99dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/categories"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/gift" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="1dp"
                        android:text="@string/freebies"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_pay_per_click" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                       android:textAlignment="center"
                        android:textSize="11sp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:text="@string/coins"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_cafe" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:layout_gravity="center"
                        android:textSize="11sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:text="@string/store"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/fan_zone" />

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textSize="11sp"
                        android:text="@string/fan"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/flash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deals"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/blue"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/bra_and_pant"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ic_black_bubble_speech"
                        android:text="@string/t"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/two"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/wristwatch"
                        android:background="@drawable/border"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ic_black_bubble_speech"
                        android:text="@string/n"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/two"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:textAlignment="center"/>

                </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/anti_aging_cream"
                            android:background="@drawable/border"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/ic_black_bubble_speech"
                            android:text="@string/e"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/two"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:textAlignment="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/oedosnail"
                            android:background="@drawable/border"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/ic_black_bubble_speech"
                            android:text="@string/s"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/two"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:textAlignment="center"/>

                    </LinearLayout>



                </LinearLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feature"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"/>
            </RelativeLayout>


          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:src="@drawable/last"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>